
- As a corrolary, Fey::Object::Iterator::FromSelect used to attempt to merge
  an explicit attribute map with what was implied by any columns in the select
  object's select clause. This was never actually documented, and has been
  removed.

  Now, providing an explicit map means you must provide a mapping for every
  select clause element you want to pass to an object.

0.29   2009-10-10

- Allow any classes to be passed to an Iterator's constructor. However, unless
  all the classes have a Table() method, you cannot get hashes back from the
  iterator (next_as_hash(), etc.).


0.28   2009-09-15

- When a Fey::ORM::Table using class's constructor does not return an object,
  the error message is no longer set in $@. Instead, you can call
  MyClass->ConstructorError() to get the error. The value of $@ is preserved
  in the constructor as whatever it was before the constructor was called.

- Added a $VERSION to every .pm file that matches Fey::ORM.

- Doc fixes - RT #48484 (Terrence Brannon) and #49595 (Guoying Qi)


0.27   2009-08-18

- Changed all code that checked for a Fey::SQL::Select object to instead check
  that the object does the Fey;:Role::SQL::ReturnsData role. This lets you
  pass a union to an object iterator, among other things.


0.26   2009-07-03

- Changes to work with the latest Moose (0.86).


0.25   2009-06-21

- Changes to work with the latest Moose (0.82).


0.24   2009-04-20

- Shut up a warning from the latest Moose that it will not inline a
  constructor for Fey::Object::Table.


0.23   2009-04-07

- Changes to work with the latest Moose (0.73_01+).


0.22   2009-03-23

- If a table consisted of _just_ its key, then trying to call new()
  for the associated class blew up, but they could be created via an
  iterator. Test case provided by Andrew Baumhauer.


0.21   2009-02-25

* This release contains several backwards incompatible changes.

* Fey::Object::Iterator has been renamed to